--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -2,3 +2,6 @@
   --font-family-base: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
   --font-family-title: "Raleway", "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
 }
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
+
