--- a/0x02-CSS_advanced/styles/7-style.css
+++ b/0x02-CSS_advanced/styles/7-style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700&display=swap');
 :root {
-  --font-family-base: "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
-  --font-family-title: "Raleway", "Open Sans", Helvetica Neue, Helvetica, Arial, sans-serif;
+  --font-family-base: 'Open Sans', sans-serif;
+  --font-family-title: 'Raleway', sans-serif;
 }
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
+body {
+  font-family: var(--font-family-base);
+}
