--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -1,3 +1,7 @@
+:root {
+  --section-header-align: center;
+}
+
 .section-header {
-  text-align: center;
+  text-align: var( --section-header-align);
 }
