--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -5,5 +5,5 @@ a:hover {
   text-decoration: underline;
 }
 a:active {
-  background-color: var(--color-light-grey);
+  background-color: color-light-grey;
 }
